--- a/src/components/menu/Menu.module.css
+++ b/src/components/menu/Menu.module.css
@@ -1,7 +1,8 @@
 .header {
     background: var(--gray-800);
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    align-items: center;
     padding: 1.25rem 0;
 }
 
@@ -9,8 +10,7 @@
     max-width: 70rem;
     margin: 2rem auto;
     padding: 0 1rem;
-
-    display: grid;
+    display: flex;
     grid-template-columns: 256px 1fr;
     gap: 2rem;
     align-items: flex-start;
